# kicad-source-mirror

./: .gitignore  CMakeLists.txt  README.md  install-deps.sh
cmake/: Functions.cmake
eeschema/gseim/: CMakeLists.txt  gseim_component_db.cpp  gseim_component_db.h  gseim_ebe_parser.cpp  gseim_ebe_parser.h  gseim_param_parser.cpp  gseim_param_parser.h  gseim_paths.cpp  gseim_paths.h  gseim_sub_parser.cpp  gseim_sub_parser.h  gseim_subckt_db.cpp  gseim_subckt_db.h  gseim_xbe_db.cpp  gseim_xbe_db.h  gseim_xbe_parser.cpp  gseim_xbe_parser.h
resources/gseim/: CMakeLists.txt  GSEIM_Library.kicad_sym  slvparms.in  sym-lib-table
resources/gseim/ebe/: ammeter_fb.ebe  battery_r.ebe  dcmc.ebe  diode_spice.ebe  indmc1_e.ebe  l.ebe  vsrc_x.ebe  xfmr_level0_1ph_2_2.ebe  z_polar.ebe
resources/gseim/gseim_aux/: ebe.aux
resources/gseim/gseim_aux/ebe/: battery_c.ebe  battery_vsrc.ebe  isrc_dc.ebe  solar_module_1.ebe  vccs.ebe  vcvs.ebe  voltmeter.ebe  vsrc_clock.ebe  z.ebe
resources/gseim/gseim_aux/xbe/: abs.xbe  alphabeta_to_dq_1.xbe  atan2_rad.xbe  average_mv_1.xbe  clock_1_dual.xbe  cmpr_2_2.xbe  cmprh_2_1.xbe  cmprh_2_2.xbe  edge_delay_1.xbe  integrator.xbe  min_max_3.xbe  modulo_twopi.xbe  pole_complex_order_2.xbe  pole_real_order_1.xbe  sampler_1.xbe  signum.xbe  sin.xbe  sop_4_6.xbe  sop_6_6.xbe  sqrt.xbe  srff_nor.xbe  user_fn_4_3.xbe  user_fn_4_4.xbe  vsi_3ph_1.xbe  x_dummy.xbe
resources/gseim/sub/: opamp.sub
resources/gseim/xbe/: abc_to_alphabeta_1.xbe  average_mv_2.xbe  clock.xbe  clock_1a.xbe  clock_1b.xbe  clock_thyr.xbe  cmpr_1_2.xbe  cmpr_2_1.xbe  cos.xbe  decoder_2_4.xbe  dq_to_alphabeta_1.xbe  dq_to_alphabeta_2.xbe  dummy.xbe  indmc2b.xbe  lag_1.xbe  lag_2.xbe  max.xbe  mult_2.xbe  not.xbe  or_3.xbe  pole_real_order_2.xbe  pole_real_order_4.xbe  pwl20.xbe  sampler.xbe  sincos.xbe  src_ac.xbe  user_fn_2_1.xbe  xfer_fn.xbe
(+140 files in other folders)
